changed to look like a chat hehe

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ p {
     font-size: 1em;
     font-family: 'Open Sans', sans-serif;
     font-weight: 400;
-    color:#FFFFFF;
+    color:#FFF;
 
 }
 
@@ -43,6 +43,7 @@ body {
          -o-animation: fadein 2s; /* Opera < 12.1 */
             animation: fadein 2s;
 }
+
 
 @keyframes fadein {
     from { opacity: 0; background-color: rgba(0, 0, 0, 1);}
@@ -96,7 +97,7 @@ body {
 
 
 .avatar {
-    border-radius: 30px;
+    border-radius: 150px;
     height: 150px;
     width: auto;
     -moz-box-shadow:     0 0 10px rgba(0,0,0,.3);
@@ -105,12 +106,21 @@ body {
     }
 
 
+.post a, a:visited {
+    color: #FFF;
+}
+    
+    
+.post a:hover {
+    color: deeppink;
+}
+    
+    
 
+    
 @media only screen and (min-width: 961px){
     .avatar{
-        height: 30%;
-        width: 30%;
-        float: left;
+        /* float: left; */
         margin: 1em;
         margin-right: 2em;
     }
@@ -161,7 +171,7 @@ body {
         -ms-transition: all 0.2s ease-out;
         transition: all 0.2s ease-out;
     }
-
+    
     .footer a:hover{
         text-shadow: #FFFFFF 0px 0px 5px;
         color:#FFFFFF;
@@ -268,3 +278,69 @@ body {
     to   { text-shadow: #FFFFFF 0px 0px 5px; }
 
 }
+
+
+
+
+#chat-container {
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+  }
+  
+  .bubble {
+    border: solid 1px #333;
+    background: #333;
+    margin-bottom: 0.25rem;
+    max-width: 60%;
+    align-self: flex-start;
+    padding: 0.5rem;
+    padding: 0.5rem 0.7rem;
+    border-radius: 0.75rem;
+    position: relative;
+    text-align: left;
+  }
+  
+  .bubble::after {
+      content: '';
+      position: absolute;
+      left: 0;
+      top: 50%;
+      width: 0;
+    height: 0;
+    border: 12px solid transparent;
+    border-right-color: #333;
+    border-left: 0;
+    border-top: 0;
+    margin-top: -6px;
+    margin-left: -12px;
+    filter: drop-shadow(0px 1px 0px #333) drop-shadow(0px -1px 0px #333);
+  }
+  
+  .bubble.right {
+    border-color: #333;
+    background: #333;
+    align-self: flex-end;
+    text-align: left;
+  }
+  
+  .bubble.right::after {
+      content: '';
+      position: absolute;
+      right: 0;
+      top: 50%;
+      width: 0;
+      height: 0;
+      border: 12px solid transparent;
+    border-left-color: #333;
+    border-right: 0;
+      border-top: 0;
+    margin-top: -6px;
+    margin-right: -12px;
+    filter: drop-shadow(0px 1px 0px #333) drop-shadow(0px -1px 0px #333);
+    left: initial;
+  }
+  
+  .bubble p {
+    margin: 0;
+  }
